update software page, (italics)

--- a/resources.html
+++ b/resources.html
@@ -78,7 +78,7 @@
 						<a href="https://cran.r-project.org/package=chromatographR" class="external-link"><img src="https://cranlogs.r-pkg.org/badges/last-month/chromatographR" alt="monthly downloads"></a> 
 						<!-- badges: end -->
 									<br> 
-									chromatographR provides a set of tools for flexibly and reproducibly analyzing HPLC-DAD data or other "simple" chromatographic data (e.g. HPLC-UV, GC-FID) in R. Includes functions for preprocessing, alignment, peak-finding and fitting, peak-table construction, data-visualization, etc. For an example workflow, see the <a href = https://ethanbass.github.io/chromatographR/articles/chromatographR.html class = "external-link"> vignette</a>.
+									<em>chromatographR</em> provides a set of tools for flexibly and reproducibly analyzing HPLC-DAD data or other "simple" chromatographic data (e.g. HPLC-UV, GC-FID) in R. Includes functions for preprocessing, alignment, peak-finding and fitting, peak-table construction, data-visualization, etc. For an example workflow, see the <a href = https://ethanbass.github.io/chromatographR/articles/chromatographR.html class = "external-link"> vignette</a>.
 									</p>
 								</td>
 								<td style=" vertical-align: top;">
@@ -99,7 +99,7 @@
 									<a href="https://cran.r-project.org/package=chromConverter" class="external-link"><img src="https://cranlogs.r-pkg.org/badges/last-month/chromConverter" alt="monthly downloads"></a>
 									<!-- badges: end -->
 									<br>
-									chromConverter reads chromatograms from a variety of proprietary formats into R objects. It currently supports conversion of 'Agilent ChemStation', 'Agilent MassHunter', and 'ThermoRaw' files as well as various text-based formats. In addition to its internal file parsers, chromConverter provides a simple programmatic interface to file parsers from several external libraries, such as <a href="https://github.com/bovee/aston"> Aston</a>, <a href = "https://github.com/bovee/entab">Entab</a>, <a href = "https://www.openchrom.net/">OpenChrom</a>, <a href="https://rainbow-api.readthedocs.io/">rainbow</a>, and the <a href = "https://github.com/compomics/ThermoRawFileParser">ThermoRawFileParser</a>.
+									<em>chromConverter</em> reads chromatograms from a variety of proprietary formats into R objects. It currently supports conversion of 'Agilent ChemStation', 'Agilent MassHunter', and 'ThermoRaw' files as well as various text-based formats. In addition to its internal file parsers, chromConverter provides a simple programmatic interface to file parsers from several external libraries, such as <a href="https://github.com/bovee/aston"> Aston</a>, <a href = "https://github.com/bovee/entab">Entab</a>, <a href = "https://www.openchrom.net/">OpenChrom</a>, <a href="https://rainbow-api.readthedocs.io/">rainbow</a>, and the <a href = "https://github.com/compomics/ThermoRawFileParser">ThermoRawFileParser</a>.
 									</p>
 								</td>
 								<td style=" vertical-align: top;">
@@ -118,7 +118,7 @@
 									<a href="https://github.com/emersion/stability-badges#experimental" class="external-link"><img src="https://img.shields.io/badge/stability-experimental-orange.svg" alt="stability badge"></a> 
 									<!-- badges: end -->
 									<br>
-									There are many wonderful open source tools for analyzing mass spectrometry data like MS-DIAL and MZmine, however these tools are not as flexible as R for downstream statistical analyses of the resulting feature tables. Rather than re-inventing the wheel, I wanted a tool that could be used to flexibly analyze MS alignments in R. The mzinspectr package makes it easy to import feature tables from other programs for further processing and analysis in R. It includes functions for normalization, feature identification, and visualization of spectra.
+									There are many wonderful open source tools for analyzing mass spectrometry data like MS-DIAL and MZmine, however these tools are not as flexible as R for downstream statistical analyses of the resulting feature tables. Rather than re-inventing the wheel, I wanted a tool that could be used to flexibly analyze MS alignments in R. The <em>mzinspectr</em> package makes it easy to import feature tables from other programs for further processing and analysis in R. It includes functions for normalization, feature identification, and visualization of spectra.
 									</p>	
 								</td>
 								<td style="vertical-align: top;">
@@ -138,7 +138,7 @@
 									<a href="https://github.com/emersion/stability-badges#experimental" class="external-link"><img src="https://img.shields.io/badge/stability-experimental-orange.svg" alt="stability badge"></a> 
 									<!-- badges: end -->
 									<br>
-									This package provides a simple way to visualize paired comparisons by adding compact letter displays to 'ggplot2' figures. The example shows differences in body mass between penguin species, using data from the <a href = https://allisonhorst.github.io/palmerpenguins/ class = "external-link"> palmerpenguins </a> package. To get started, visit the <a href = https://ethanbass.github.io/ggtukey/articles/ggtukey.html class = "external-link"> vignette</a>.
+									The <em>ggtukey</em> package provides a simple way to visualize paired comparisons by adding compact letter displays to 'ggplot2' figures. The example shows differences in body mass between penguin species, using data from the <a href = https://allisonhorst.github.io/palmerpenguins/ class = "external-link"> palmerpenguins </a> package. To get started, visit the <a href = https://ethanbass.github.io/ggtukey/articles/ggtukey.html class = "external-link"> vignette</a>.
 									</p>
 								</td>
 								<td style="vertical-align: top;">
@@ -159,7 +159,7 @@
 									<a href="https://github.com/emersion/stability-badges#experimental" class="external-link"><img src="https://img.shields.io/badge/stability-experimental-orange.svg" alt="stability badge"></a> 
 									<!-- badges: end -->
 									<br>
-									This is a utility I made in R to facilitate easier stacking of photos with <a href="https://www.zerenesystems.com/cms/stacker"> Zerene Stacker </a>. I use it mainly for stacking pictures of mycorrhizal hyphae (as pictured on the right) and root structures to measure the performance of mycorrhizae.
+									<em>zerenebatchR</em> is a utility I made in R to facilitate easier stacking of photos with <a href="https://www.zerenesystems.com/cms/stacker"> Zerene Stacker </a>. I use it mainly for stacking pictures of mycorrhizal hyphae (as pictured on the right) and root structures to measure the performance of mycorrhizae.
 									<br>
 									</p>
 								</td>
