fix: interaction diversity title

--- a/publications.html
+++ b/publications.html
@@ -79,7 +79,7 @@
                                         (<em>* indicates equal contribution</em>)</br>
 										<hr class="bigger-hr">
 										
-										3. Whitehead SR, <b>Bass E</b>, Corrigan A, Kessler A, Katja P. Phytochemical diversity defends against diverse consumers. Ecology Letters 24, no. 6 (2021): 1205–14. <a href="https://doi.org/10.1111/ele.13736"> https://doi.org/10.1111/ele.13736</a>.
+										3. Whitehead SR, <b>Bass E</b>, Corrigan A, Kessler A, Katja P. Interaction diversity explains the maintenance of phytochemical diversity. Ecology Letters 24, no. 6 (2021): 1205–14. <a href="https://doi.org/10.1111/ele.13736"> https://doi.org/10.1111/ele.13736</a>.
 										<hr class="bigger-hr">
 										
 										2. Mutyambai DM, <b>Bass E</b>, Luttermoser T, Poveda K, Midega CAO, Khan ZR, Kessler A. More Than “Push” and “Pull”? Plant-Soil Feedbacks of Maize Companion Cropping Increase Chemical Plant Defenses Against Herbivores. Frontiers in Ecology and Evolution 7 (2019): 217. <a href="https://doi.org/10.3389/fevo.2019.00217"> https://doi.org/10.3389/fevo.2019.00217</a>.
