--- a/resources.html
+++ b/resources.html
@@ -99,7 +99,7 @@
 									<a href="https://cran.r-project.org/package=chromConverter" class="external-link"><img src="https://cranlogs.r-pkg.org/badges/last-month/chromConverter" alt="monthly downloads"></a>
 									<!-- badges: end -->
 									<br>
-									<em>chromConverter</em> reads chromatograms from a variety of proprietary formats into R objects. It currently supports conversion of 'Agilent ChemStation', 'Agilent MassHunter', and 'ThermoRaw' files as well as various text-based formats. In addition to its internal file parsers, chromConverter provides a simple programmatic interface to file parsers from several external libraries, such as <a href="https://github.com/bovee/aston"> Aston</a>, <a href = "https://github.com/bovee/entab">Entab</a>, <a href = "https://www.openchrom.net/">OpenChrom</a>, <a href="https://rainbow-api.readthedocs.io/">rainbow</a>, and the <a href = "https://github.com/compomics/ThermoRawFileParser">ThermoRawFileParser</a>.
+									<em>chromConverter</em> reads chromatograms from a variety of proprietary formats into R objects. It currently supports conversion of 'Agilent ChemStation', 'Agilent MassHunter', 'Shimadzu LabSolutions', 'ThermoRaw' files as well as various text-based formats. In addition to its internal file parsers, chromConverter provides a simple programmatic interface to file parsers from several external libraries, such as <a href="https://github.com/bovee/aston"> Aston</a>, <a href = "https://github.com/bovee/entab">Entab</a>, <a href = "https://www.openchrom.net/">OpenChrom</a>, <a href="https://rainbow-api.readthedocs.io/">rainbow</a>, and the <a href = "https://github.com/compomics/ThermoRawFileParser">ThermoRawFileParser</a>.
 									</p>
 								</td>
 								<td style=" vertical-align: top;">
@@ -118,7 +118,7 @@
 									<a href="https://github.com/emersion/stability-badges#experimental" class="external-link"><img src="https://img.shields.io/badge/stability-experimental-orange.svg" alt="stability badge"></a> 
 									<!-- badges: end -->
 									<br>
-									There are many wonderful open source tools for analyzing mass spectrometry data like MS-DIAL and MZmine, however these tools are not as flexible as R for downstream statistical analyses of the resulting feature tables. Rather than re-inventing the wheel, I wanted a tool that could be used to flexibly analyze MS alignments in R. The <em>mzinspectr</em> package makes it easy to import feature tables from other programs for further processing and analysis in R. It includes functions for normalization, feature identification, and visualization of spectra.
+									There are many wonderful open source tools for analyzing mass spectrometry data like MS-DIAL and MZmine, however these tools are not as flexible as R for downstream statistical analyses of the resulting feature tables. Rather than re-inventing the wheel, I wanted a tool that could be used to flexibly analyze MS alignments in R. The <em>mzinspectr</em> package makes it easy to import feature tables from other programs for further processing and analysis in R. It includes functions for normalization, feature identification, and visualization of mass spectra.
 									</p>	
 								</td>
 								<td style="vertical-align: top;">
