--- a/publications.html
+++ b/publications.html
@@ -37,6 +37,7 @@
 								<a href="index.html">About me</a>
 								<a href="publications.html">Publications</a>
 								<a href="resources.html">Software</a>
+								<a href="https://ethanbass.github.io/Protocols/">Protocols</a>
 								<a href="Bass_CV.pdf">CV</a>
 							</div>
     						<div class="bottom-row">
