update email address

--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,7 @@
 								<a href="https://bsky.app/profile/ethanbass.bsky.social" class="icon solid fa-square"><span class="label">Bluesky</span></a>
 								<a href="https://twitter.com/Bass_E_" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
 								<a href="https://ecoevo.social/@ethanbass" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a>
-								<a href="mailto:eb565@cornell.edu" class="icon solid fa-envelope"><span class="label">Email</span></a>
+								<a href="mailto:ethanbass@uchicago.edu" class="icon solid fa-envelope"><span class="label">Email</span></a>
 							</div>
 							</ul>
 						</nav>
@@ -109,7 +109,7 @@
 						<li><a href="https://github.com/ethanbass/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://orcid.org/0000-0002-6175-6739" class="icon brands fa-orcid"><span class="label">Github</span></a></li>
 						<li><a href="https://www.researchgate.net/profile/Ethan-Bass-2/" class="icon brands fa-researchgate"><span class="label">Github</span></a></li>
-						<li><a href="mailto:eb565@cornell.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:ethanbass@uchicago.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 										</ul>
 									</section>
 
