added last-commit badges for software projects

--- a/resources.html
+++ b/resources.html
@@ -74,9 +74,13 @@
 									<a href="https://github.com/ethanbass/chromatographR" class="icon brands fa-github"><span class="label">Github</span></a>
 									<br>
 						<!-- badges: start -->
-						<a href="https://doi.org/10.5281/zenodo.7016988" class="external-link"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.7016988.svg" alt="DOI"></a> 
+						<a href="https://github.com/ethanbass/chromatographR/" class="external-link"><img src="https://img.shields.io/github/last-commit/ethanbass/chromatographR" alt="last-commit"></a>
+						<a href="https://ethanbass.r-universe.dev/chromatographR" class="external-link"><img src="https://ethanbass.r-universe.dev/badges/chromatographR" alt="R-universe version"></a>
+						<br>
 						<a href="https://cran.r-project.org/package=chromatographR" class="external-link"><img src="https://cranlogs.r-pkg.org/badges/grand-total/chromatographR" alt="total downloads"></a> 
 						<a href="https://cran.r-project.org/package=chromatographR" class="external-link"><img src="https://cranlogs.r-pkg.org/badges/last-month/chromatographR" alt="monthly downloads"></a> 
+						<br>
+						<a href="https://doi.org/10.5281/zenodo.7016988" class="external-link"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.7016988.svg" alt="DOI"></a> 
 						<!-- badges: end -->
 									<br> 
 									<em>chromatographR</em> provides a set of tools for flexibly and reproducibly analyzing HPLC-DAD data or other "simple" chromatographic data (e.g. HPLC-UV, GC-FID) in R. Includes functions for preprocessing, alignment, peak-finding and fitting, peak-table construction, data-visualization, etc. For an example workflow, see the <a href = https://ethanbass.github.io/chromatographR/articles/chromatographR.html class = "external-link"> vignette</a>.
@@ -92,12 +96,17 @@
 									<p style="margin-left: 2vw; margin-right: 10vw">
 									<br>
 									<a href="https://ethanbass.github.io/chromConverter/"> <strong> chromConverter </strong>: Chromatographic File Converter </a>
-									<a href="https://github.com/ethanbass/chromConverter" class="icon brands fa-github"><span class="label">Github</span></a>
+									<a href="https://cran.r-project.org/package=chromConverter" class="external-link"><span class="label">Github</span></a>
 									<br>
 									<!-- badges: start -->
-									<a href="https://doi.org/10.5281/zenodo.6944342" class="external-link"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.6944342.svg" alt="DOI"></a>
+									<a href="https://github.com/ethanbass/chromConverter/" class="external-link"><img src="https://img.shields.io/github/last-commit/ethanbass/chromConverter" alt="last-commit"></a>
+									<a href="https://cran.r-project.org/package=chromConverter" class="external-link"><img src="https://www.r-pkg.org/badges/version/chromConverter" alt="CRAN version"></a>
+									<a href="https://ethanbass.r-universe.dev/chromConverter" class="external-link"><img src="https://ethanbass.r-universe.dev/badges/chromConverter" alt="R-universe version"></a>
+									<br>
 									<a href="https://cran.r-project.org/package=chromConverter" class="external-link"><img src="https://cranlogs.r-pkg.org/badges/grand-total/chromConverter" alt="total downloads"></a>
 									<a href="https://cran.r-project.org/package=chromConverter" class="external-link"><img src="https://cranlogs.r-pkg.org/badges/last-month/chromConverter" alt="monthly downloads"></a>
+									<br>
+									<a href="https://doi.org/10.5281/zenodo.6944342" class="external-link"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.6944342.svg" alt="DOI"></a>
 									<!-- badges: end -->
 									<br>
 									<em>chromConverter</em> reads chromatograms from a variety of proprietary formats into R objects. It currently supports conversion of 'Agilent ChemStation', 'Agilent MassHunter', 'Shimadzu LabSolutions', 'ThermoRaw' files as well as various text-based formats. In addition to its internal file parsers, chromConverter provides a simple programmatic interface to file parsers from several external libraries, such as <a href="https://github.com/bovee/aston"> Aston</a>, <a href = "https://github.com/bovee/entab">Entab</a>, <a href = "https://www.openchrom.net/">OpenChrom</a>, <a href="https://rainbow-api.readthedocs.io/">rainbow</a>, and the <a href = "https://github.com/compomics/ThermoRawFileParser">ThermoRawFileParser</a>.
@@ -115,6 +124,7 @@
 									<a href="https://github.com/ethanbass/mzinspectr" class="icon brands fa-github"><span class="label">Github</span></a>
 									<br>
 									<!-- badges: start -->
+									<a href="https://github.com/ethanbass/mzinspectr/" class="external-link"><img src="https://img.shields.io/github/last-commit/ethanbass/mzinspectr" alt="last-commit"></a>
 									<a href="https://ethanbass.r-universe.dev/mzinspectr#" class="external-link"><img src="https://ethanbass.r-universe.dev/badges/mzinspectr" alt="r-universe badge"></a> 
 									<a href="https://github.com/emersion/stability-badges#experimental" class="external-link"><img src="https://img.shields.io/badge/stability-experimental-orange.svg" alt="stability badge"></a> 
 									<!-- badges: end -->
@@ -135,6 +145,7 @@
 									<a href="https://github.com/ethanbass/ggtukey" class="icon brands fa-github"><span class="label">Github</span></a>
 									<br>
 									<!-- badges: start -->
+									<a href="https://github.com/ethanbass/ggtukey/" class="external-link"><img src="https://img.shields.io/github/last-commit/ethanbass/ggtukey" alt="last-commit"></a>
 									<a href="https://ethanbass.r-universe.dev/ggtukey#" class="external-link"><img src="https://ethanbass.r-universe.dev/badges/ggtukey" alt="r-universe badge"></a> 
 									<a href="https://github.com/emersion/stability-badges#experimental" class="external-link"><img src="https://img.shields.io/badge/stability-experimental-orange.svg" alt="stability badge"></a> 
 									<!-- badges: end -->
@@ -156,6 +167,7 @@
 
 									<br>
 									<!-- badges: start -->
+									<a href="https://github.com/ethanbass/zerenebatchR/" class="external-link"><img src="https://img.shields.io/github/last-commit/ethanbass/zerenebatchR" alt="last-commit"></a>
 									<a href="https://ethanbass.r-universe.dev/zerenebatchR#" class="external-link"><img src="https://ethanbass.r-universe.dev/badges/zerenebatchR" alt="r-universe badge"></a> 
 									<a href="https://github.com/emersion/stability-badges#experimental" class="external-link"><img src="https://img.shields.io/badge/stability-experimental-orange.svg" alt="stability badge"></a> 
 									<!-- badges: end -->
@@ -176,6 +188,7 @@
 									<a href="https://github.com/ethanbass/ShinyChromViewer" class="icon brands fa-github"><span class="label">Github</span></a>
 									<br>
 									<!-- badges: start -->
+									<a href="https://github.com/ethanbass/ShinyChromViewer/" class="external-link"><img src="https://img.shields.io/github/last-commit/ethanbass/ShinyChromViewer" alt="last-commit"></a>
 									<a href="https://ethanbass.r-universe.dev/ShinyChromViewer#" class="external-link"><img src="https://ethanbass.r-universe.dev/badges/ShinyChromViewer" alt="r-universe badge"></a> 
 									<a href="https://github.com/emersion/stability-badges#experimental" class="external-link"><img src="https://img.shields.io/badge/stability-experimental-orange.svg" alt="stability badge"></a> 
 									<!-- badges: end -->
@@ -198,6 +211,7 @@
 									<a href="https://github.com/ethanbass/VPdtw" class="icon brands fa-github"><span class="label">Github</span></a>
 									<br>
 									<!-- badges: start -->
+									<a href="https://github.com/ethanbass/VPdtw/" class="external-link"><img src="https://img.shields.io/github/last-commit/ethanbass/VPdtw" alt="last-commit"></a>
 									<a href="https://cran.r-project.org/package=VPdtw" class="external-link"><img src="https://www.r-pkg.org/badges/version/VPdtw" alt="cran badge"></a> 
 									<a href="https://cran.r-project.org/package=VPdtw" class="external-link"><img src="https://cranlogs.r-pkg.org/badges/grand-total/VPdtw" alt="total downloads"></a> 
 									<a href="" class="external-link"><img src="https://cranlogs.r-pkg.org/badges/last-month/VPdtw" alt="monthly downloads"></a> 
