--- a/publications.html
+++ b/publications.html
@@ -91,6 +91,9 @@
 
 						<h3> Preprints and Invited Articles</h3>
 						<hr class="bigger-hr">
+						<b>Bass E</b>. Cutting the defense budget: how allocation costs shape induced resistance in plants. PLOS Biology (2025).  <br>
+						<a href="https://doi.org/10.1371/journal.pbio.3003317">https://doi.org/10.1371/journal.pbio.3003317</a>. (Commentary on <a href="https://doi.org/10.1371/journal.pbio.3003280">Wan et al., 2025</a>).
+						<hr class="bigger-hr">
 						<b>Bass E</b>. Getting to the root of divergent outcomes in the modulation of plant-soil feedbacks by benzoxazinoids. New Phytologist (2024).  <br>
 						<a href="https://doi.org/10.1111/nph.19545">https://doi.org/10.1111/nph.19545</a>. (Commentary on <a href="https://doi.org/10.1111/nph.19401">Gfeller et al., 2023</a>).
 					</div>
