added r2zotero blurb under software

--- a/resources.html
+++ b/resources.html
@@ -201,6 +201,24 @@
 									<a href="https://github.com/ethanbass/ShinyChromViewer/" class="image featured"><img src="images/shinyChromViewerUI_crop.png" style="width: 80%; margin-left: -5vw; margin-bottom:-2vw;" alt="" /></a>
 								</td>
 						</tr>
+						<tr> <!-- r2zotero -->
+							<td>
+									<p style="margin-left: 2vw; margin-right: 10vw">
+									<a href="https://github.com/ethanbass/r2zotero"> <strong> r2zotero: </strong> Send Suggested R Package Citations Directly to Zotero </a>.
+									<a href="https://github.com/ethanbass/r2zotero" class="icon brands fa-github"><span class="label">Github</span></a>
+									<br>
+									<!-- badges: start -->
+									<a href="https://github.com/ethanbass/ShinyChromViewer/" class="external-link"><img src="https://img.shields.io/github/last-commit/ethanbass/r2zotero" alt="last-commit"></a>
+									<a href="https://github.com/emersion/stability-badges#experimental" class="external-link"><img src="https://img.shields.io/badge/stability-experimental-orange.svg" alt="stability badge"></a> 
+									<!-- badges: end -->
+									<br>
+									A utility to facilitate the citation of R packages by importing citations from 'CITATION' file directly to a local Zotero library using the Zotero Web API.
+									<br>
+									</p>
+								</td>
+								<td style="vertical-align: top;">
+								</td>
+						</tr>
 					</table>
 												
 							<header>
